--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <a href="#" class="menu_link">Help servis</a>
 
-            <a href="./indiex.html" class="menu_link">Consultation</a>
+            <a href="#" class="menu_link">Consultation</a>
         </nav>
     </header>
 
